Created database.cpp and deleted unused .cpp files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(Database)
 
 set(SOURCES
     source/Main.cpp
-    source/FileHandler.cpp
+    source/Database.cpp
     source/UserHandler.cpp
 )
 
