--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ enable_testing()
 add_executable(tests
   tests/Test_UserHandler.cpp
   tests/Test_Database.cpp
-  source/Test_Database.cpp
+  source/Database.cpp
   source/UserHandler.cpp
 )
 
